recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:9: error: not found: value lenght
	spiral(steps-increment, angle, lenght, increment)
                                       ^